# UltimateBasic

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MANUAL.md  README.md  build.rs  demo_game.prg  demo_game.ub  whatnews.txt
.claude/: settings.local.json
.github/workflows/: package-examples.yml
examples/: Mad_Ikari.sid  bitmap_demo.ub  block_demo.ub  cube_demo.ub  efekt.asm  features.prg  features.ub  fn_demo.ub  function_demo.ub  joystick_demo.prg  joystick_demo.ub  labirint.ub  mouse_demo.ub  mux_demo.prg  mux_demo.ub  new_features.prg  new_features.ub  orbit_demo.prg  orbit_demo.ub  parallax.ub  parallax_demo.ub  plasma_demo.prg  plasma_demo.ub  print.ub  raster_irq_demo.ub  reu_bitmap_demo.prg  reu_bitmap_demo.ub  sid_music_demo.ub  simple_test.ub  sprite_data.ub  sprite_mux_orbit.prg  sprite_mux_orbit.ub  sprite_orbit_demo.prg  sprite_orbit_demo.ub  tenprint.ub  test.ub  text_scroll_demo.ub  wide_x_demo.ub
src/: lib.rs  main.rs
src/compiler/: ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs
tests/: integration_tests.rs
tmp/: clsc_test.ub  errtst.ub  feature_check_all.ub  feature_check_irqs.ub  feature_check_string_index.ub  feature_check_val.ub  multi.d64  test.d64  test_dec.ub
